RESOLVED FIXED277453
[text-box-trim] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-atomic-inline-001.html
https://bugs.webkit.org/show_bug.cgi?id=277453
Summary [text-box-trim] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-t...
alan
Reported 2024-07-31 15:46:43 PDT
ssia
Attachments
Patch (4.15 KB, patch)
2024-07-31 15:49 PDT, alan
no flags
[fast-cq]Patch (4.15 KB, patch)
2024-08-01 05:15 PDT, alan
no flags
alan
Comment 1 2024-07-31 15:49:44 PDT
alan
Comment 2 2024-08-01 05:15:50 PDT
Created attachment 472030 [details] [fast-cq]Patch
EWS
Comment 3 2024-08-01 07:17:39 PDT
Committed 281706@main (03da1ed88354): <https://commits.webkit.org/281706@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472030 [details].
Radar WebKit Bug Importer
Comment 4 2024-08-01 07:18:15 PDT
Note You need to log in before you can comment on or make changes to this bug.