[text-box-trim] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-atomic-inline-001.html https://bugs.webkit.org/show_bug.cgi?id=277453

Reviewed by Antti Koivisto.

text-box-trim is not supposed to get propagated to atomic boxes, so let's
move TextBoxTrim _after_ we finished with laying out those inline level boxes.
(This needs to be moved once we start running layout from inside IFC)

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutInFlowChildren):
(WebCore::RenderBlockFlow::layoutModernLines):

Canonical link: https://commits.webkit.org/281706@main